force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Age__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>