force-app/main/default/objects/Contact/fields/XDO_TTHAIR_App_Version__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_App_Version__c</fullName>
    <label>App Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>