force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Card__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Card__c</fullName>
    <label>Card</label>
    <type>Url</type>
</CustomField>