force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Cust360_Metric3__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Cust360_Metric3__c</fullName>
    <label>Cust360 Metric 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>