force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Cust360_Purchase_Score__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Cust360_Purchase_Score__c</fullName>
    <label>Cust360 Purchase Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>