force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Language__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Language__c</fullName>
    <label>Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>