force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Membership_Status__c</fullName>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <label>active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>