force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Preferred_Seat__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Preferred_Seat__c</fullName>
    <label>Preferred Seat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aisle</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>