force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Trip_Status__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Trip_Status__c</fullName>
    <label>Trip Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Trip</fullName>
            </value>
            <value>
                <fullName>On-going</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>