force-app/main/default/objects/Contact/fields/XDO_TTHAIR_Trip_Status_icon__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Trip_Status_icon__c</fullName>
    <formula>IMAGE(
  IF(ISPICKVAL(XDO_TTHAIR_Trip_Status__c, &quot;Pre Trip&quot;), &quot;/resource/GenieCustomer360Icons/icons/preTrip.png&quot;,
      IF(ISPICKVAL(XDO_TTHAIR_Trip_Status__c, &quot;On-going&quot;), &quot;/resource/GenieCustomer360Icons/icons/ongoing.png&quot;,
          IF(ISPICKVAL(XDO_TTHAIR_Trip_Status__c, &quot;Completed&quot;), &quot;/resource/GenieCustomer360Icons/icons/completed.svg&quot;, &quot;text&quot;)
      )
   ),&quot;text&quot;,21,20
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Status icon</label>
    <type>Text</type>
</CustomField>